--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
               <div class="card-body">
                 <h5 class="card-title">A04</h5>
                 <p class="card-text"></p>
-                <a href="../Activities/Act04/index.html" class="btn btn-primary"
-                  >View</a
-                >
+                <a href="../Act04" class="btn btn-primary">View</a>
               </div>
             </div>
           </div>
