--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <h5 class="card-title">Activity 2</h5>
                 <p class="card-text">Act 2</p>
                 <a href="#" class="btn btn-primary">View</a>
+                <!-- this is a comment -->
               </div>
             </div>
           </div>
