--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="row-header rounded-3">
         <div
           class="h1 text-center"
-          style="color: #7e3aff; font-family: sans-serif"
+          style="color: #3a57ff; font-family: sans-serif"
         >
           HOME
         </div>
@@ -40,16 +40,45 @@
 
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card">
-              <img src="..." class="card-img-top" alt="..." />
+              <img src="Act05/Ph.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Activity 2</h5>
-                <p class="card-text">Act 2</p>
-                <a href="#" class="btn btn-primary">View</a>
-                <!-- this is a comment -->
+                <h5 class="card-title">A05</h5>
+                <p class="card-text"></p>
+                <a href="Act05/index.html" class="btn btn-primary">View</a>
               </div>
             </div>
           </div>
 
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="card">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Act 3</p>
+                <a href="#" class="btn btn-primary">View</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="card">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Act 3</p>
+                <a href="#" class="btn btn-primary">View</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="card">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Act 3</p>
+                <a href="#" class="btn btn-primary">View</a>
+              </div>
+            </div>
+          </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card">
               <img src="..." class="card-img-top" alt="..." />
