--- a/Act05/index.html
+++ b/Act05/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website Layout</title>
+    <title>A05</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -85,6 +85,9 @@
         background: #555;
       }
     </style>
+    <head>
+      <link rel="icon" href="../LOGO.png" type="image/png" />
+    </head>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #e2e9ee">
