--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             <div class="card">
               <img src="..." class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Act 3</p>
-                <a href="#" class="btn btn-primary">View</a>
+                <h5 class="card-title">A0a7</h5>
+
+                <a href="/Act07/index.html" class="btn btn-primary">View</a>
               </div>
             </div>
           </div>
