--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card">
-              <img src="..." class="card-img-top" alt="..." />
+              <img
+                src="/Act07/background2.jpg"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Act 3</p>
