--- a/index.html
+++ b/index.html
@@ -80,9 +80,13 @@
 
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card">
-              <img src="..." class="card-img-top" alt="..." />
+              <img
+                src="/Act07/background2.jpg"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
-                <h5 class="card-title">A0a7</h5>
+                <h5 class="card-title">A07</h5>
 
                 <a href="/Act07/index.html" class="btn btn-primary">View</a>
               </div>
@@ -90,11 +94,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card">
-              <img
-                src="/Act07/background2.jpg"
-                class="card-img-top"
-                alt="..."
-              />
+              <img src="..." class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Act 3</p>
