--- a/Act07/index.html
+++ b/Act07/index.html
@@ -33,7 +33,7 @@
           </div>
           <div class="col text-center">
             <h1 class="text-white mb-0" style="font-family: 'Cinzel', serif">
-              HERO
+              HEROES
             </h1>
           </div>
         </div>
