--- a/Act07/view.html
+++ b/Act07/view.html
@@ -18,6 +18,11 @@
     .hero-card {
       cursor: pointer;
       transition: transform 0.3s ease;
+      background: linear-gradient(145deg, #3a3a3a, #2c2c2c);
+      border-radius: 8px;
+      padding: 15px;
+      box-shadow: inset 0px 4px 6px rgba(0, 0, 0, 0.8),
+        0px 4px 8px rgba(0, 0, 0, 0.4);
     }
 
     .hero-card:hover {
@@ -31,6 +36,17 @@
     #hero-detail img {
       max-height: 300px;
       object-fit: contain;
+      border-radius: 10px;
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
+    }
+
+    #hero-name {
+      font-family: "Cinzel", serif;
+      font-size: 2.5em;
+      font-weight: bold;
+      color: #f7c04a;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+      margin-bottom: 15px;
     }
 
     #hero-attributes ul {
@@ -39,7 +55,24 @@
     }
 
     #hero-attributes li {
-      font-size: 1.1em;
+      font-family: "Cinzel", serif;
+      font-size: 1.2em;
+      font-weight: normal;
+      color: #c7c7c7;
+      margin: 5px 0;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    }
+
+    .btn-primary {
+      background-color: #3a3a3a;
+      border: 1px solid #f7c04a;
+      font-family: "Cinzel", serif;
+    }
+
+    .btn-primary:hover {
+      background-color: #f7c04a;
+      color: black;
+      border: 1px solid #3a3a3a;
     }
   </style>
   <body>
@@ -51,7 +84,7 @@
           </button>
         </div>
 
-        <div class="col-12 col-md-8">
+        <div class="col-12 col-md-8 text-center">
           <div id="hero-detail" class="card p-4 shadow-sm">
             <img id="hero-img" src="" alt="Hero Image" class="img-fluid mb-3" />
             <h2 id="hero-name"></h2>
@@ -74,13 +107,6 @@
             document.getElementById("hero-name").textContent =
               hero.localized_name;
             document.getElementById("hero-img").src = imageUrl;
-
-            document.getElementById("strength").textContent =
-              hero.base_stats.str;
-            document.getElementById("agility").textContent =
-              hero.base_stats.agi;
-            document.getElementById("intelligence").textContent =
-              hero.base_stats.int;
           } else {
             console.error("Hero not found");
           }
