--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
       document.addEventListener("DOMContentLoaded", () => {
         const activityData = [
           { img: "TERWEB.png", title: "A04", link: "Act04/index.html" },
+
           { img: "Act05/Ph.png", title: "A05", link: "Act05/index.html" },
           {
             img: "/Act06/img/Gallery.png",
@@ -154,7 +155,12 @@
             title: "A07",
             link: "/Act07/index.html",
           },
-          { img: "...", title: "Card title", text: "Act 3", link: "#" },
+          {
+            img: "/Act08/img/bg.png",
+            title: "A08",
+            link: "/Act08/banner.html",
+          },
+
           { img: "...", title: "Card title", text: "Act 3", link: "#" },
         ];
 
