--- a/Act08/banner.html
+++ b/Act08/banner.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="parallax.css" />
     <title>EZ | Banner</title>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -16,9 +21,6 @@
         <div class="keyart_layer parallax" id="keyart-2" data-speed="11"></div>
         <div class="keyart_layer parallax" id="keyart-3" data-speed="12"></div>
         <div class="keyart_layer parallax" id="keyart-4" data-speed="11"></div>
-
-        <!--Front image, in sync with scroll, no need to parallax-->
-        <!--Add or Remove layers as needed - check Parallax.css for refrence-->
       </div>
     </section>
 
@@ -26,7 +28,7 @@
       <div style="height: 2000px; background-color: rgb(2, 5, 29)">
         <div class="container">
           <div class="col text-center">
-            <div class="row" style="color: rgb(255, 255, 255)">
+            <div class="row">
               <h1>GILAS</h1>
             </div>
           </div>
@@ -48,10 +50,17 @@
             </div>
           </div>
         </div>
+        <div class="container">
+          <div class="row justify-content-center my-5">
+            <div class="col-12 text-center">
+              <a href="../index.html" class="btn btn-primary mb-3">Back</a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
-    <!--Uses JQuery-->
+    <!-- Uses JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/parallax.js"></script>
   </body>
