--- a/Act08/banner.html
+++ b/Act08/banner.html
@@ -20,18 +20,14 @@
         <div class="keyart_layer parallax" id="keyart-1" data-speed="5"></div>
         <div class="keyart_layer parallax" id="keyart-2" data-speed="11"></div>
         <div class="keyart_layer parallax" id="keyart-3" data-speed="12"></div>
-        <div class="keyart_layer parallax" id="keyart-4" data-speed="11"></div>
+        <div class="keyart_layer parallax" id="keyart-4" data-speed="20"></div>
+        <div class="keyart_layer parallax" id="keyart-5" data-speed="25"></div>
       </div>
     </section>
 
     <section class="main-content">
-      <div style="height: 2000px; background-color: rgb(2, 5, 29)">
-        <div class="container">
-          <div class="col text-center">
-            <div class="row">
-              <h1>GILAS</h1>
-            </div>
-          </div>
+      <div style="background-color: rgb(2, 5, 29)">
+        <div class="container-fluid">
           <div class="row text-center">
             <div class="col" style="color: azure">
               The Philippines men's national basketball team (Filipino:
@@ -39,19 +35,36 @@
               Gilas Pilipinas, is the basketball team representing the
               Philippines. The team is managed by the Samahang Basketbol ng
               Pilipinas (Basketball Federation of the Philippines or simply SBP)
-              <br />
-              The team won a bronze medal in the 1954 FIBA World Championship,
-              the best finish by any team outside the Americas and Europe. In
-              the Olympics, the team took a fifth-place finish at the 1936
-              Summer Olympics, the best finish by a men's team outside the
-              Americas, Europe and Oceania. The Philippines holds the record for
-              most games won at the Olympics among teams outside the Americas,
-              Europe and Oceania.
             </div>
           </div>
         </div>
-        <div class="container">
-          <div class="row justify-content-center my-5">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+              <img
+                src="img/gilas2.png"
+                class="img-fluid w-100 mb-4"
+                alt="Gilas"
+              />
+              <img src="img/Kai.png" class="img-fluid w-100 mb-4" alt="Kai" />
+              <img
+                src="img/Alden.png"
+                class="img-fluid w-100 mb-4"
+                alt="Alden"
+              />
+              <img
+                src="img/Lebron.png"
+                class="img-fluid w-100 mb-4"
+                alt="Lebron"
+              />
+              <img
+                src="img/Ginebra.png"
+                class="img-fluid w-100"
+                alt="Ginebra"
+              />
+            </div>
+          </div>
+          <div class="row justify-content-center">
             <div class="col-12 text-center">
               <a href="../index.html" class="btn btn-primary mb-3">Back</a>
             </div>
