--- a/Act08/banner.html
+++ b/Act08/banner.html
@@ -22,6 +22,7 @@
         <div class="keyart_layer parallax" id="keyart-3" data-speed="12"></div>
         <div class="keyart_layer parallax" id="keyart-4" data-speed="20"></div>
         <div class="keyart_layer parallax" id="keyart-5" data-speed="25"></div>
+        <div class="keyart_layer parallax" id="keyart-6" data-speed="30"></div>
       </div>
     </section>
 
